# bony-agent

./: .env.chroma.example  .gitignore  .gitmodules  AGENTS.md  Agent 项目优化建议.md  CLAUDE.md  DOCKER_DEPLOY_GUIDE.md  README.md  README_EN.md  Untitled  build_native.sh  build_package.sh  build_windows.sh  deploy.sh  direct_test.txt  docker-compose.chroma.yml  docker-compose.yml  import_test.txt  ks_test_full_log.txt  project_structure_analysis.md  simple_test.py  skills-lock.json  start.bat  start_chroma.sh  start_ecs.sh  start_local.sh  start_windows.bat  start_with_tunnel.sh  stop_chroma.sh  stop_ecs.sh  test_ark_media.py  test_jimeng_key.py  test_output.json
.agent/: spec.md
.github/: copilot-instructions.md
backend/: .dockerignore  .env.example  Dockerfile  main.py  published_content.json  requirements-ocr.txt  setup_venv.sh
backend_massive_concurrent/: Dockerfile  README.md  go.mod  go.sum
backend_safety/: Cargo.toml  Dockerfile  README.md  build.rs
backend_safety/docs/: DESIGN.md
backend_safety/src/: main.rs
backend_safety/src/grpc/: document.rs  mod.rs  video.rs
backend_safety/src/parser/: document.rs  mod.rs  video.rs
backend_safety/src/parser/formats/: docx.rs  mod.rs  mp4.rs  pdf.rs  text.rs
backend_safety/src/workflow/: crypto.rs  mod.rs  service.rs  state_store.rs
browser-extension/: manifest.json
canvases/: README.md  ai-media-agent-overview.canvas.tsx
desktop-pet/: README.md  package-lock.json  package.json  vite.config.ts
desktop-pet/src-tauri/: Cargo.toml  Info.plist  tauri.conf.json  tauri.macos.conf.json  tauri.windows.conf.json
desktop-pet/src-tauri/.cargo/: config.toml
desktop-pet/src-tauri/capabilities/: default.json
desktop-pet/src-tauri/icons/: icon.icns
desktop-pet/src-tauri/src/: backend_client.rs  clipboard.rs  lib.rs  perception.rs
docs/: AGENT_ROUTING_COLLABORATION.md  AGENT_ROUTING_DIAGRAMS.md  API_REFERENCE.md  ARCHITECTURE_OVERVIEW.md  CANVAS_OVERVIEW.md  CHANGELOG.md  CHAT_UNIFICATION.md  COMPUTER_SERVICE.md  COMPUTER_USE_AGENT_S.md  DESKTOP_PET.md  DEVELOPMENT_GUIDE.md  DOCUMENT_PARSING_FLOW.md  FEATURE_LIST.md  FRONTEND_ARCHITECTURE.md  GITHUB_OAUTH_QUICKSTART.md  HERMES_ALIGNMENT_TODO.md  HERMES_INTEGRATION.md  INSTALLATION.md  INVESTOR_DECK.md  (+39 more)
(+1371 files in other folders)
