[package]
name = "ai-media-agent-desktop-pet"
version = "0.1.0"
description = "AI Media Agent desktop companion pet sidecar"
authors = ["AI Media Agent"]
edition = "2021"

[lib]
name = "desktop_pet_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[features]
default = []
macos-private = ["tauri/macos-private-api"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [ "tray-icon"] }
tauri-plugin-shell = "2"
tauri-plugin-global-shortcut = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
active-win-pos-rs = "0.8"
arboard = "3"
sha2 = "0.10"
hex = "0.4"
tokio = { version = "1", features = ["sync", "time"] }
parking_lot = "0.12"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "stream"] }
futures-util = { version = "0.3", default-features = false, features = ["std"] }

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[profile.release]
panic = "abort"
codegen-units = 16
lto = false
opt-level = "s"
strip = true
